add resolution parameter

--- a/geo_sam_encoder.ipynb
+++ b/geo_sam_encoder.ipynb
@@ -112,6 +112,7 @@
    "source": [
     "range_max = 255\n",
     "range_min = 0\n",
+    "resolution = None\n",
     "band_count = 3\n",
     "selected_bands = [1, 2, 3]\n",
     "# selected_bands = [1]\n",
@@ -145,7 +146,7 @@
    ],
    "source": [
     "raster_dir = \"\"\n",
-    "test_imgs = SamTestRasterDataset(root=raster_dir, crs=None, bands=input_bands, cache=False) #\n",
+    "test_imgs = SamTestRasterDataset(root=raster_dir, res=resolution, crs=None, bands=input_bands, cache=False) #\n",
     "print('raster num: ', test_imgs.index.get_size())\n",
     "print(test_imgs.all_bands)\n",
     "print(test_imgs.bands)\n",
