使用 Colaboratory 创建

--- a/GeoSAM-Image-Encoder/examples/geosam-image-encoder.ipynb
+++ b/GeoSAM-Image-Encoder/examples/geosam-image-encoder.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1nlvcmIyizdxZuJ66IapWW-RX1PlN4stW",
-      "authorship_tag": "ABX9TyPHiVRPewrwI2c1doAVpX53",
+      "authorship_tag": "ABX9TyN2pEkdUaLNXJEBJJhJPXYP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,7 +26,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/coolzhao/Geo-SAM/blob/dev/GeoSAM-Image-Encoder/examples/geosam-image-encoder.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/coolzhao/Geo-SAM/blob/main/GeoSAM-Image-Encoder/examples/geosam-image-encoder.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -127,7 +127,7 @@
       "metadata": {
         "id": "Z0K8RQV63H_v"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -199,7 +199,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Run by specify parameters dirctly"
+        "#### Run by specify parameters directly"
       ],
       "metadata": {
         "id": "gb03VNJe4O2r"
@@ -222,30 +222,7 @@
         "feature_dir = './'\n",
         "\n",
         "## init ImageEncoder\n",
-        "img_encoder = ImageEncoder(checkpoint_path)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "mNwD3v3D8RD1",
-        "outputId": "f892c473-e9a1-42d5-ae75-c5c1bcd9261f"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Initializing SAM model...\n",
-            "\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "img_encoder = ImageEncoder(checkpoint_path)\n",
         "## encode image\n",
         "img_encoder.encode_image(image_path,feature_dir)"
       ],
@@ -253,15 +230,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "3peY4H_Y90So",
-        "outputId": "bea1cadf-add4-440e-e75e-d71e570bf72f"
+        "id": "mNwD3v3D8RD1",
+        "outputId": "d627c917-1736-442c-c698-61199e762c58"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Initializing SAM model...\n",
+            "\n",
             "\n",
             "----------------------------------------------\n",
             "     Start encoding image to SAM features\n",
@@ -304,7 +283,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Encoding image: 100%|██████████| 12/12 [00:19<00:00,  1.61s/batch]"
+            "Encoding image: 100%|██████████| 12/12 [00:20<00:00,  1.70s/batch]"
           ]
         },
         {
@@ -376,7 +355,7 @@
     {
       "cell_type": "code",
       "source": [
-        "## Then, you can run image incoding by parrameters from setting.json file\n",
+        "## Then, you can run image encoding by parameters from setting.json file\n",
         "img_encoder = ImageEncoder(**init_settings)\n",
         "img_encoder.encode_image(**encode_settings)"
       ],
@@ -655,15 +634,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "O3O1cA3gyUzI"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
