使用 Colaboratory 创建

--- a/GeoSAM-Image-Encoder/examples/geosam-image-encoder.ipynb
+++ b/GeoSAM-Image-Encoder/examples/geosam-image-encoder.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1nlvcmIyizdxZuJ66IapWW-RX1PlN4stW",
-      "authorship_tag": "ABX9TyN2pEkdUaLNXJEBJJhJPXYP",
+      "authorship_tag": "ABX9TyOE/BHqrQ8wu+k+s9zXeIEz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -101,7 +101,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Usage"
+        "## Usage\n",
+        "\n",
+        "You can call this script in Python or Terminal. We recommend using Python interface directly for processing, which will have greater flexibility."
       ],
       "metadata": {
         "id": "ILKiN60dXhQF"
@@ -203,15 +205,6 @@
       ],
       "metadata": {
         "id": "gb03VNJe4O2r"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "We recommend using Python interface directly for processing, which will have greater flexibility."
-      ],
-      "metadata": {
-        "id": "bXjV25Hg9pNH"
       }
     },
     {
