使用 Colaboratory 创建

--- a/GeoSAM-Image-Encoder/examples/geosam-image-encoder.ipynb
+++ b/GeoSAM-Image-Encoder/examples/geosam-image-encoder.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1nlvcmIyizdxZuJ66IapWW-RX1PlN4stW",
-      "authorship_tag": "ABX9TyOE/BHqrQ8wu+k+s9zXeIEz",
+      "authorship_tag": "ABX9TyMmiYP4vN4EtsTl97Xemgpq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,9 +32,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# GeoSAM-Image-Encoder\n",
+        "# GeoSAM-Image-Encoder (Python package)\n",
         "\n",
-        "This package is part of Geo-SAM and is used to encode image data into features recognized by Geo-SAM."
+        "[![PyPI Version](https://img.shields.io/pypi/v/GeoSAM-Image-Encoder)](https://pypi.org/project/GeoSAM-Image-Encoder)\n",
+        "[![Downloads](https://static.pepy.tech/badge/GeoSAM-Image-Encoder)](https://pepy.tech/project/GeoSAM-Image-Encoder)\n",
+        "\n",
+        "\n",
+        "This package is part of the [Geo-SAM](https://github.com/coolzhao/Geo-SAM) project and is a standalone Python package that does not depend on QGIS. This package allows you to **encode remote sensing images into features that can be recognized by Geo-SAM using a remote server**, such as ``Colab``, ``AWS``, ``Azure`` or your own ``HPC``."
       ],
       "metadata": {
         "id": "ofyKNeqP6Wj4"
@@ -45,7 +49,7 @@
       "source": [
         "## Installation\n",
         "\n",
-        "Installing `GeoSAM-Image-Encoder` directly will install the CPU version of `PyTorch`. Therefore, it is recommended to install the appropriate version of `PyTorch` before installing `GeoSAM-Image-Encoder` in your machine. You can install the corresponding version based on the official PyTorch website:\n",
+        "Installing `GeoSAM-Image-Encoder` may directly install the CPU version of `PyTorch`. Therefore, it is recommended to install the appropriate version of `PyTorch` before installing `GeoSAM-Image-Encoder` in your machine. You can install the corresponding version based on the official PyTorch website:\n",
         "<https://pytorch.org/get-started/locally/>\n",
         "\n",
         "After installing PyTorch, you can install `GeoSAM-Image-Encoder` via pip.\n"
@@ -103,7 +107,7 @@
       "source": [
         "## Usage\n",
         "\n",
-        "You can call this script in Python or Terminal. We recommend using Python interface directly for processing, which will have greater flexibility."
+        "There are **two ways** to use GeoSAM-Image-Encoder. You can call it in Python or Terminal. We recommend using Python interface directly which will have greater flexibility."
       ],
       "metadata": {
         "id": "ILKiN60dXhQF"
@@ -129,47 +133,8 @@
       "metadata": {
         "id": "Z0K8RQV63H_v"
       },
-      "execution_count": 3,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "check the folder contains geosam and add it to environment if you want to run in terminal"
-      ],
-      "metadata": {
-        "id": "34LNsf9H8oIA"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "geosam.folder"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "LKQcboGt7US4",
-        "outputId": "6973806f-77b6-46b5-8a99-8babfe14aab2"
-      },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'/usr/local/lib/python3.10/dist-packages/geosam'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 4
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -201,7 +166,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Run by specify parameters directly"
+        "#### Run by specify parameters directly\n",
+        "\n",
+        "If you want to specify the parameters directly, you can run it like this:"
       ],
       "metadata": {
         "id": "gb03VNJe4O2r"
@@ -226,7 +193,7 @@
         "id": "mNwD3v3D8RD1",
         "outputId": "d627c917-1736-442c-c698-61199e762c58"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -300,7 +267,7 @@
       "source": [
         "#### Run by parameters from setting.json file\n",
         "\n",
-        "If you want to using settings.json file to provide the parameters"
+        "If you want to using `settings.json` file which exported from Geo-SAM plugin to provide parameters, you can run it like this:"
       ],
       "metadata": {
         "id": "SuHYf5BQTT1H"
